--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   ],
   "require": {
     "php": ">=5.3.0",
-    "myqee/installer": "~3.*"
+    "myqee/installer": "3.*"
   },
   "autoload": {
     "psr-0": {"MyQEE\\Develop": "src/"}
