--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
       "homepage": "http://www.queyang.com/"
     }
   ],
+  "require": {
+    "myqee/installer": "~3.0"
+  },
   "autoload": {
     "psr-0": {"MyQEE\\Develop": "src/"}
   }
